# RustyClippy

./: .gitignore  ASSETS_NOTE.md  PROJECT_SUMMARY.md  QUICK_START.md  README.md  package-lock.json  package.json  tsconfig.json  vite.config.ts
.github/: release.yml
.github/workflows/: main.yml
src/: chat.html  index.html  settings.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: README.md  icon.icns
src-tauri/src/: commands.rs  config.rs  lib.rs  main.rs  personality.rs  tts.rs
src-tauri/src/llm/: local.rs  mod.rs  openai.rs
src/scripts/: chat.ts  clippy-agent.ts  main.ts  settings.ts
src/styles/: chat.css  clippy.css  settings.css
