[package]
name = "rusty-clippy"
version = "0.1.0"
description = "AI-powered Clippy desktop assistant"
authors = ["Nathan Tregub"]
license = ""
repository = ""
edition = "2021"

[lib]
name = "rusty_clippy_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api", "tray-icon"] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "stream"] }
tokio-stream = "0.1"
anyhow = "1"
dirs = "5"
async-trait = "0.1"

# Local LLM inference via llama.cpp
llama-cpp-2 = "0.1"
hf-hub = { version = "0.4", features = ["tokio"] }

# TTS (Kokoro text-to-speech + audio playback)
kokoro-tts = "0.3"
rodio = "0.20"
bincode = "2"

[target."cfg(not(any(target_os = \"android\", target_os = \"ios\")))".dependencies]
tauri-plugin-updater = "2"

[profile.dev]
incremental = true

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
