[package]
name = "rusty-clippy"
version = "0.1.0"
description = "AI-powered Clippy desktop assistant"
authors = ["Nathan Tregub"]
license = ""
repository = ""
edition = "2021"

[lib]
name = "rusty_clippy_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api", "tray-icon"] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "stream", "blocking"] }
tokio-stream = "0.1"
anyhow = "1"
dirs = "5"
async-trait = "0.1"

# Local LLM inference via llama.cpp
llama-cpp-2 = "0.1"
hf-hub = { version = "0.4", features = ["tokio"] }

# TTS via Piper (fast, offline, cross-platform neural TTS)
piper-rs = "0.1"
rodio = "0.19"
# Pin ort to the version piper-rs was built for (rc.11 has breaking changes)
ort = "=2.0.0-rc.9"
ort-sys = "=2.0.0-rc.9"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[target."cfg(not(any(target_os = \"android\", target_os = \"ios\")))".dependencies]
tauri-plugin-updater = "2"

[profile.dev]
incremental = true

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
